# Solana-Contract-Token

./: .gitignore  Makefile  README.md  package-lock.json  package.json
client/: main.ts
contract/program/: solana_deploy_token-keypair.json
rust-client/: Cargo.toml
rust-client/src/: lib.rs  main.rs
rust-program/: Cargo.toml
rust-program/src/: lib.rs
