[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "2.0.0"
solana-sdk = "2.0.1"
borsh = "1.4.0"
serde = "1.0"
serde_json = "1.0"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }  # Check for the correct version
tokio = { version = "1.38.0", features = ["full"] }
solana-program-test = "2.0.0"
solana-program = "2.0.0"