[package]
name = "solana-deploy-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.9.0"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[lib]
crate-type = ["cdylib","lib"]